Fix eslint Vim + add GET-ALL-PRODUCT AND GET-ALL-COMMENT

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,9 +2,10 @@
   "arrowParens": "avoid",
   "singleQuote": true,
   "semi": true,
-  "printWidth": 120,
+  "printWidth": 160,
   "endOfLine": "auto",
   "bracketSpacing": true,
   "traillingComma": "none",
-  "tabWidth": 2
+  "tabWidth": 2,
+  "jsxBracketSameLine": true
 }
