--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/firebase": "^3.2.1",
     "@types/jasmine": "^4.3.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
@@ -47,6 +48,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-rate-limit": "^6.6.0",
+    "firebase": "^9.12.1",
     "helmet": "^6.0.0",
     "http-status-codes": "^2.2.0",
     "ipware": "^2.0.0",
