--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/morgan": "^1.9.3",
     "@types/nodemailer": "^6.4.6",
     "@types/pg": "^8.6.5",
+    "@types/pg-format": "^1.0.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
@@ -57,6 +58,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
+    "pg-format": "^1.0.4",
     "twilio": "^3.82.1",
     "zod": "^3.19.1"
   }
