--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
+    "cloudinary-core": "^2.13.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -42,6 +43,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.13",
@@ -56,6 +58,8 @@
     "jsonwebtoken": "^8.5.1",
     "mailer": "^0.6.7",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
     "pg-format": "^1.0.4",
