--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jasmine": "^4.3.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.6",
     "@types/pg": "^8.6.5",
     "@types/pg-format": "^1.0.2",
@@ -52,6 +53,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.6.0",
     "firebase": "^9.12.1",
+    "formidable": "^2.0.1",
     "helmet": "^6.0.0",
     "http-status-codes": "^2.2.0",
     "ipware": "^2.0.0",
@@ -63,6 +65,7 @@
     "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
     "pg-format": "^1.0.4",
+    "socket.io": "^4.5.3",
     "twilio": "^3.82.1",
     "zod": "^3.19.1"
   }
