--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/nodemailer": "^6.4.6",
     "@types/pg": "^8.6.5",
     "@types/pg-format": "^1.0.2",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
