--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cloudinary": "^1.32.0",
+    "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.13",
