--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/firebase": "^3.2.1",
     "@types/jasmine": "^4.3.0",
     "@types/jsonwebtoken": "^8.5.9",
@@ -54,6 +55,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-rate-limit": "^6.6.0",
+    "express-session": "^1.17.3",
     "firebase": "^9.12.1",
     "formidable": "^2.0.1",
     "helmet": "^6.0.0",
